Feat: Modulos de Reservas y Mantenimiento/Limpieza completados con validaciones en tiempo real